# task_19.2

./: README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: load_fixtures.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_product_owner.py  0004_alter_product_options_product_is_published.py
catalog/templates/: home.html  product_details.html  product_list.html
catalog/templates/catalog/: home.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: moderator_only.py  my_tags.py
config/: .env.EXAMPLE  .env.example  settings.py  urls.py
fixtures/: catalog_data.json
users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: create_moderator.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: password_reset.html  user_form.html  user_profile_detail.html  user_profile_form.html
